fixed game data passing to modal. Updated modal styling. Next step to format game details for better visibility

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -101,6 +101,18 @@
   background-color: #e43da4;
 }
 
+.modal-info-tag {
+  width: fit-content;
+  padding-inline: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 10px;
+  background-color: rgba(122, 42, 118, 0.432);
+  margin-bottom: 10px;
+  margin-top: 0;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -492,7 +504,6 @@ a {
 }
 .browse-container .banner-section div .btn {
   width: 100%;
-  border: orange solid thin;
   display: inline-block;
 }
 .browse-container .banner-section .menu-buttons-container {
@@ -527,31 +538,34 @@ a {
   border: solid 5px #161c20fd;
   border-radius: 5px;
   width: 75%;
-  max-height: 100vh;
   max-width: 75vw;
   background-color: #10171dfd;
-  display: flex;
+  display: block;
   flex-flow: column nowrap;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 0;
+  height: auto;
+  min-height: 100% !important;
+}
+.modal-container .modal-banner-container {
+  border: thin solid red;
 }
 .modal-container .modal-banner-image {
   width: 100%;
   border-radius: 5px;
-  height: fit-content;
   position: relative;
+  border: thin solid yellow;
 }
 .modal-container .modal-banner-image:after {
   display: block;
   position: absolute;
-  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.26) 0, black 100%);
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.26) 25%, black 100%), linear-gradient(to top, rgba(0, 0, 0, 0.26) 75%, black 100%);
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
   content: "";
-  border: thin solid red;
 }
 .modal-container .modal-banner-image .modal-image {
   width: 100%;
@@ -563,26 +577,28 @@ a {
   top: 5%;
   left: 5%;
   color: #FFF;
+  bordeR: thin solid blue;
 }
 .modal-container .modal-banner-info h2 {
   font-size: 5rem;
 }
-.modal-container .modal-banner-info p {
-  margin: 0;
+.modal-container .modal-banner-info .modal-banner-info-platforms {
+  border: thin solid green;
 }
 .modal-container .modal-close-btn {
   position: absolute;
   right: 5px;
   top: 5px;
-  font-size: 3rem;
+  font-size: 2.5rem;
   height: fit-content;
-  padding-inline: 5px;
+  padding-inline: 10px;
   text-align: center;
   vertical-align: middle;
-  background-color: #963e3e;
+  background-color: rgba(182, 48, 48, 0.767);
   border: none;
-  border-radius: 5px;
-  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  border-radius: 30px;
+  color: rgba(255, 255, 255, 0.767);
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
   transition: all 0.2s ease-in-out;
   z-index: 1001;
 }
