--- a/client/src/sass/_utilities.scss
+++ b/client/src/sass/_utilities.scss
@@ -75,3 +75,16 @@ $platforms: (
         background-color: $val
     }
 }
+
+.modal-info-tag{
+    // border: thin solid white;
+    width: fit-content;
+    padding-inline: 20px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border-radius: 10px;
+    background-color: rgba(122, 42, 118, 0.432);
+    margin-bottom: 10px;
+    margin-top: 0;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
